--- a/static/index.html
+++ b/static/index.html
@@ -6,15 +6,15 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- CSS -->
-	<link href="css/my.css" rel='stylesheet' type='text/css' />
-	<link href="css/bootstrap.min.css" rel='stylesheet' type='text/css' />
+	<link href="/static/css/my.css" rel='stylesheet' type='text/css' />
+	<link href="/static/css/bootstrap.min.css" rel='stylesheet' type='text/css' />
 	<!-- JQuery -->
-	<script src="js/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+	<script src="/static/js/jquery.min.js"></script>
+	<script src="/static/js/bootstrap.min.js"></script>
 	<!-- React JavaScript -->
-	<script src="js/react.js"></script>
-	<script src="js/react-dom.js"></script>
-	<script src="js/browser.min.js"></script>
+	<script src="/static/js/react.js"></script>
+	<script src="/static/js/react-dom.js"></script>
+	<script src="/static/js/browser.min.js"></script>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
 			render: function(){
 				return(
 					<div className="indexFrame">
-						<img className="firstLogo" src="images/logo.jpg" alt="HaSearch"/>
+						<img className="firstLogo" src="static/images/logo.jpg" alt="HaSearch"/>
 						<div className="searchInputWrapper">
 							<input id="keywords" />
 							<div className='buttonsWrapper'>
@@ -34,7 +34,7 @@
 							</div>
 						</div>
 					</div>
-				);			
+				);
 			}
 		});
 		ReactDOM.render(
@@ -43,7 +43,4 @@
 		);
 	</script>
 </body>
-
-
-
 </html>
