--- a/static/index.html
+++ b/static/index.html
@@ -24,21 +24,49 @@
 	<div id='container'></div>
 	<script type='text/babel'>
 		var MainFrame = React.createClass({
+			getInitialState:function(){
+				return{
+					stage:'prepare'
+				}
+			},
+			runSearch: function(){
+				this.setState({stage:'show'});
+			},
 			render: function(){
-				return(
-					<div className="indexFrame">
-						<div className="firstLogoDiv">
-							<img className="firstLogo" src="images/logo.jpg" alt="HaSearch"/>
-						</div>
-						<div className="searchInputWrapper">
-							<div id="keywordsInput">
+				if(this.state.stage==='prepare'){
+					return(
+						<div className="indexFrame">
+							<div className="firstLogoDiv">
+								<img className="firstLogo" src="images/logo.jpg" alt="HaSearch"/>
 							</div>
-							<div className='buttonsWrapper'>
-								<input className='myBtn' type="button" value="Naive" style={{width:"100%",height:"30px",fontWeight:"bold"}}/>
+							<div className="searchInputWrapper">
+								<div id="keywordsInput">
+								</div>
+								<div className='buttonsWrapper'>
+									<input className='myBtn' type="button" value="Naive" style={{width:"100%",height:"30px",fontWeight:"bold"}} onClick={this.runSearch}/>
+								</div>
 							</div>
 						</div>
-					</div>
-				);
+					);
+				}else{
+					return(
+						<div className="resultFrame">
+							<div className="searchBar">
+								<div className="smLogo">HaSearch</div>
+								<div ><input type="text"/></div>
+								<div>button</div>
+							</div>
+							<span className="searchTip">Are you searching XXX?</span>
+							<div className="resultList">
+								<ul>
+									<li>You have come to a wasteland.</li>
+									<li>2333</li>
+								</ul>
+							</div>
+						</div>
+					);
+				}
+
 			}
 		});
 		ReactDOM.render(
