--- a/static/index.html
+++ b/static/index.html
@@ -6,18 +6,18 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- CSS -->
-	<link href="css/my.css" rel='stylesheet' type='text/css' />
-	<link href="css/bootstrap.min.css" rel='stylesheet' type='text/css' />
-	<link href="css/autocomplete.css" rel='stylesheet' type='text/css' />
+	<link href="static/css/my.css" rel='stylesheet' type='text/css' />
+	<link href="static/css/bootstrap.min.css" rel='stylesheet' type='text/css' />
+	<link href="static/css/autocomplete.css" rel='stylesheet' type='text/css' />
 	<!-- JQuery -->
-	<script src="js/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+	<script src="static/js/jquery.min.js"></script>
+	<script src="static/js/bootstrap.min.js"></script>
 	<!-- React JavaScript -->
-	<script src="js/react.js"></script>
-	<script src="js/react-dom.js"></script>
-	<script src="js/browser.min.js"></script>
+	<script src="static/js/react.js"></script>
+	<script src="static/js/react-dom.js"></script>
+	<script src="static/js/browser.min.js"></script>
 	<!-- AutoSuggest.js -->
-	<script src="js/autosuggest.min.js"></script>
+	<script src="static/js/autosuggest.min.js"></script>
 </head>
 
 <body>
@@ -37,7 +37,7 @@
 					return(
 						<div className="indexFrame">
 							<div className="firstLogoDiv">
-								<img className="firstLogo" src="images/logo.jpg" alt="HaSearch"/>
+								<img className="firstLogo" src="static/images/logo.jpg" alt="HaSearch"/>
 							</div>
 							<div className="searchInputWrapper">
 								<div id="keywordsInput">
@@ -52,7 +52,7 @@
 					return(
 						<div className="resultFrame">
 							<div className="searchBar">
-								<div className="smLogo"><img className="smLogo" src="images/smLogo.png" alt="HaSearch"/></div>
+								<div className="smLogo"><img className="smLogo" src="static/images/smLogo.png" alt="HaSearch"/></div>
 								<div ><input id='continueWords' type="text"/></div>
 								<div><button className="myBtn1"><span className="icon">{'续'}</span></button></div>
 							</div>
