--- a/static/index.html
+++ b/static/index.html
@@ -47,6 +47,7 @@
 					input:'',
 					time:0,
 					resList:[],
+					orig:'',
 					show:true
 				}
 			},
@@ -69,14 +70,20 @@
 				if(this.state.stage==='prepare'){
 					this.setState({stage:'show',input:input});
 				}
+				this.setState({orig:input});
+			},
+			orgSearch: function(){
+
 			},
 			tip: function(){
 				if(this.state.correct!==''){
 					return(
 						<div>
-							<span className="searchTip">Did you mean?</span>
-							<br/>
-							<span className="promptWords">{this.state.correct}</span>
+							<span className="searchTip">Showing results for </span>
+							<span className="promptWords"><i>{this.state.correct}</i></span>
+							<br></br>
+							<span className="stillSearch">Search instead for </span>
+							<a className="origSearch" onClick={this.orgSearch}>{this.state.orig}</a>
 						</div>
 					);
 				}else{
@@ -124,7 +131,7 @@
 									{
 										arr.map(function(i){
 											if(i===chose){
-												return(<a key={i} className='chosedItem'>{i}</a>);
+												return(<p key={i} className='chosedItem'>{i}</p>);
 											}else{
 												return(<a key={i} className='unchosedItem' onClick={changeChose.bind(null,i)}>{i}</a>);
 											}
