--- a/static/index.html
+++ b/static/index.html
@@ -155,19 +155,98 @@
 		var AutoSuggest = React.createClass({
 			getInitialState:function(){
 				return{
-					input:this.props.input
+					input:this.props.input,
+					num:0,
+					org:'',
+					suggestion:[]
 				};
 			},
-			onKeyDown:function(event){
-				if(event.keyCode===13){
-					this.props.runSearch(this.state.input);
+			changeChs:function(chs){
+				var old = this.state.num;
+				if(old===0){
+					this.setState({num:chs,input:this.state.suggestion[chs-1],org:this.state.input});//store
+				}else if(chs===0){
+					this.setState({num:chs,input:this.state.org});//recover
+				}else{
+					this.setState({num:chs,input:this.state.suggestion[chs-1]});//change
 				}
 			},
+			onKeyDown:function(event){
+				var len = this.state.suggestion.length;
+				var chs = this.state.num;
+				if(event.keyCode===13){
+					this.props.runSearch(this.state.input);
+				}else if(event.keyCode===40){//down
+					if(chs===len){
+						chs = 0;
+					}else{
+						chs = chs + 1;
+					}
+					this.changeChs(chs);
+				}else if(event.keyCode===38){//up
+					if(chs===0){
+						chs = len;
+					}else{
+						chs = chs - 1;
+					}
+					this.changeChs(chs);
+				}
+			},
+			getSuggestion:function(value){
+				// using bing API, it may crash when microsoft change it
+				$.ajax({
+					url:"http://api.bing.net/osjson.aspx?query=" + encodeURIComponent(value) + "&mkt=en-us&JsonType=callback&JsonCallback=?",
+					dataType: "jsonp",
+					success:function(data){
+						this.setState({suggestion:data[1].splice(0,5)});
+						console.log(this.state.suggestion);
+					}.bind(this)
+				});
+			},
 			onChange:function(event){
-				this.setState({input:event.target.value});
+				var newval = event.target.value;
+				if(newval.length>2){
+					this.getSuggestion(newval);
+				}
+				this.setState({input:newval});
 			},
 			rowClick:function(){
 				this.props.runSearch(this.state.input);
+			},
+			clickSuggest:function(text){
+				this.props.runSearch(text);
+			},
+			mouseOver:function(i){
+				this.setState({num:i+1});
+				this.changeChs(i+1);
+			},
+			genSug:function(){
+				var that = this;
+				if(this.state.suggestion.length!==0){
+					return(
+						<div className="suggestWrapper">
+							<ul id="suggestList">
+								{
+									this.state.suggestion.map(function(text,i){
+										if(that.state.num===i+1){
+											return(
+												<li className="suggestItem" id="chosedItem" key={text+i} onClick={that.clickSuggest.bind(null,text)} onMouseOver={that.mouseOver.bind(null,i)}>
+													{text}
+												</li>
+											);									
+										}else{
+											return(
+												<li className="suggestItem" key={text+i} onClick={that.clickSuggest.bind(null,text)} onMouseOver={that.mouseOver.bind(null,i)}>
+													{text}
+												</li>
+											);	
+										}
+									})
+								}
+							</ul>
+						</div>
+					);
+				}
 			},
 			render: function(){
 				return(
@@ -178,6 +257,7 @@
 						<div className='buttonsWrapper'>
 							<input className="myBtn" type="button" value="Row" onClick={this.rowClick}/>
 						</div>
+						{this.genSug()}
 					</div>
 				);
 			}
