--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- icon -->
+	<link rel="shortcut icon" href="static/favicon.ico"/>
+	<link rel="bookmark" href="static/favicon.ico"/>
 	<!-- CSS -->
 	<link href="static/css/my.css" rel='stylesheet' type='text/css' />
 	<link href="static/css/bootstrap.min.css" rel='stylesheet' type='text/css' />
