--- a/static/index.html
+++ b/static/index.html
@@ -35,7 +35,7 @@
 							return(
 								<li key={i} >
 									<a href={"static/Reuters/"+value+".html"} target="_blank">{value}</a>
-									<Abstract input={input} num={value}/>
+									<Abstract input={input} num={value} key={value}/>
 								</li>
 							);
 						})
@@ -58,16 +58,15 @@
 					while(found = regx.exec(res)){
 						matches.push(found[0]);
 					}
-					console.log(matches);
 					var abs = matches.map(function(val){
 						var tmp = val.split(input);
 						return(
-							<span key={val}>
+							<span key={val} escape="false">
 								{tmp[0]}<em>{input}</em>{tmp[1]}
 							</span>
 						);
 					});
-					//var abs = text.replace(new RegExp(input,'g'),"<em>"+input+"<em/>");
+					console.log(abs);
 					this.setState({abs:abs});
 				}.bind(this))
 			},
