add top k, api unknown

--- a/static/index.html
+++ b/static/index.html
@@ -305,6 +305,9 @@
 								{this.genSug()}
 							</datalist>
 						</div>
+						<div id="topkInput">
+							<input className="tkin" placeholder="top k"></input>
+						</div>
 						<div className='buttonsWrapper'>
 							<input className="myBtn" type="button" value="Row" onClick={this.rowClick} />
 						</div>
